Update of data classification
2->1
1->0

Bert needs 0,1 not 1,2

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
     "        \n",
     "        for line in txt.readlines():\n",
     "            line = line.replace('\"',\"'\")\n",
-    "            csv.write(line[0] + ',\"' + line[2:-1] + '\"' + '\\n')\n",
+    "            csv.write(str(int(line[0]) - 1) + ',\"' + line[2:-1] + '\"' + '\\n')\n",
     "    \n",
     "dataAdder()\n",
     "dataToCSVs()"
