Start to the output maker

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -61,9 +61,12 @@
    "outputs": [],
    "source": [
     "def WSD_Test_Rubbish(sentences):\n",
-    "\n",
+    "    output = open(\"./rubbish_outputs.txt\", \"w\")\n",
+    "    \n",
     "    encodings = TOKENIZER(sentences, truncation=True, padding=True)\n",
-    "    output.write(prediction)\n"
+    "    \n",
+    "    for encoding in encodings:\n",
+    "        output.write(prediction)\n"
    ]
   }
  ],
