--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,31 @@
     "    encodings = TOKENIZER(sentences, truncation=True, padding=True)\n",
     "    \n",
     "    for encoding in encodings:\n",
-    "        output.write(prediction)\n"
+    "        output.write(str(encoding + 1) + \"\\n\")\n",
+    "        \n",
+    "def WSD_Test_Thorn(sentences):\n",
+    "    output = open(\"./thorn_outputs.txt\", \"w\")\n",
+    "    \n",
+    "    encodings = TOKENIZER(sentences, truncation=True, padding=True)\n",
+    "    \n",
+    "    for encoding in encodings:\n",
+    "        output.write(str(encoding + 1) + \"\\n\")\n",
+    "        \n",
+    "def WSD_Test_Conviction(sentences):\n",
+    "    output = open(\"./conviction_outputs.txt\", \"w\")\n",
+    "    \n",
+    "    encodings = TOKENIZER(sentences, truncation=True, padding=True)\n",
+    "    \n",
+    "    for encoding in encodings:\n",
+    "        output.write(str(encoding + 1) + \"\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
