Finished Converting everything to csvs
everything is good to go

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,21 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting adding process\n",
       "not for this program\n",
-      "Extra File Detected...skipping it\n"
+      "Extra File Detected...skipping it\n",
+      "Finished adding process\n",
+      "\n",
+      "===========================\n",
+      "Starting conversion to csvs\n",
+      "===========================\n",
+      "\n",
+      "Converting Rubbish.txt to csv start\n",
+      "Finished converting Rubbish.txt\n",
+      "\n",
+      "Converting Conviction.txt to csv start\n",
+      "Finished converting Conviction.txt\n",
+      "\n",
+      "Converting Thorn.txt to csv start\n",
+      "Finished converting Thorn.txt\n",
+      "===========================\n",
+      "Finished conversion process\n",
+      "===========================\n"
      ]
     }
    ],
    "source": [
     "from os import listdir\n",
     "def dataAdder():\n",
+    "    print(\"Starting adding process\")\n",
+    "\n",
     "    for file in listdir('./Data/adds'):\n",
     "        if(\"Conviction\" in file):\n",
     "            AddToFile = open(\"./Data/txts/Conviction.txt\", \"a\")\n",
@@ -38,17 +58,24 @@
     "        AddToFile.write('\\n')\n",
     "        for line in ReadFromFile.readlines():\n",
     "            AddToFile.write(sense + \" \" + line)\n",
+    "    print(\"Finished adding process\")\n",
     "        \n",
     "    \n",
     "    \n",
     "def dataToCSVs():\n",
+    "    print(\"\\n===========================\\nStarting conversion to csvs\\n===========================\")\n",
     "    for file in listdir('./Data/txts'):\n",
+    "        if('.txt' not in file):\n",
+    "            continue\n",
     "        csv = open(\"./Data/csvs/\" + file[0:-4] + \".csv\", \"w\")\n",
     "        txt = open(\"./Data/txts/\" + file, \"r\")\n",
-    "        \n",
+    "        print(\"\\nConverting \" + file + \" to csv start\")\n",
     "        for line in txt.readlines():\n",
     "            line = line.replace('\"',\"'\")\n",
     "            csv.write(str(int(line[0]) - 1) + ',\"' + line[2:-1] + '\"' + '\\n')\n",
+    "        print(\"Finished converting \" + file)\n",
+    "    print(\"===========================\\nFinished conversion process\\n===========================\")\n",
+    "\n",
     "    \n",
     "dataAdder()\n",
     "dataToCSVs()"
