Extra print statements
show where in exectution file converter is

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=======================\n",
       "Starting adding process\n",
+      "=======================\n",
       "not for this program\n",
       "Extra File Detected...skipping it\n",
+      "\n",
+      "=======================\n",
       "Finished adding process\n",
+      "=======================\n",
       "\n",
       "===========================\n",
       "Starting conversion to csvs\n",
@@ -35,7 +40,7 @@
    "source": [
     "from os import listdir\n",
     "def dataAdder():\n",
-    "    print(\"Starting adding process\")\n",
+    "    print(\"=======================\\nStarting adding process\\n=======================\")\n",
     "\n",
     "    for file in listdir('./Data/adds'):\n",
     "        if(\"Conviction\" in file):\n",
@@ -58,7 +63,7 @@
     "        AddToFile.write('\\n')\n",
     "        for line in ReadFromFile.readlines():\n",
     "            AddToFile.write(sense + \" \" + line)\n",
-    "    print(\"Finished adding process\")\n",
+    "    print(\"\\n=======================\\nFinished adding process\\n=======================\")\n",
     "        \n",
     "    \n",
     "    \n",
